frontend/virtual/Include/libadalang.h

/* This type represents the analysis of a single file.

   This type has strong-reference semantics and is ref-counted. Furthermore, a
   reference to a unit contains an implicit reference to the context that owns
   it. This means that keeping a reference to a unit will keep the context and
   all the unit it contains allocated.

   This structure is partially opaque: some fields are exposed to allow direct
   access, for performance concerns.  */
typedef struct
{
   uint64_t version_number;
} *ada_analysis_unit;
/* Data type for all nodes. Nodes are assembled to make up a tree.  See the
   node primitives below to inspect such trees.

   Unlike for contexts and units, this type has weak-reference semantics:
   keeping a reference to a node has no effect on the decision to keep the unit
   that it owns allocated. This means that once all references to the context
   and units related to a node are dropped, the context and its units are
   deallocated and the node becomes a stale reference: most operations on it
   will raise a ``Stale_Reference_Error``.

   Note that since reparsing an analysis unit deallocates all the nodes it
   contains, this operation makes all reference to these nodes stale as
   well.   */
typedef void* ada_base_node;
typedef uint8_t ada_bool;
/* Location of a span of text in a source file.  */
typedef struct {
    ada_source_location start;
    ada_source_location end;
} ada_source_location_range;
/* String encoded in UTF-32 (native endianness).  */
typedef struct {
   /* Address for the content of the string.  */
    uint32_t *chars;
   /* Size of the string (in characters).  */
    size_t length;

    int is_allocated;
} ada_text;
/* Kind for this token.  */
typedef enum {
   
      
      ADA_TERMINATION = 0
      ,
      ADA_LEXING_FAILURE = 1
      ,
      ADA_IDENTIFIER = 2
      ,
      ADA_ALL = 3
      ,
      ADA_ABORT = 4
      ,
      ADA_ELSE = 5
      ,
      ADA_NEW = 6
      ,
      ADA_RETURN = 7
      ,
      ADA_ABS = 8
      ,
      ADA_ELSIF = 9
      ,
      ADA_NOT = 10
      ,
      ADA_REVERSE = 11
      ,
      ADA_END = 12
      ,
      ADA_NULL = 13
      ,
      ADA_ACCEPT = 14
      ,
      ADA_ENTRY = 15
      ,
      ADA_SELECT = 16
      ,
      ADA_ACCESS = 17
      ,
      ADA_EXCEPTION = 18
      ,
      ADA_OF = 19
      ,
      ADA_SEPARATE = 20
      ,
      ADA_EXIT = 21
      ,
      ADA_OR = 22
      ,
      ADA_OTHERS = 23
      ,
      ADA_SUBTYPE = 24
      ,
      ADA_AND = 25
      ,
      ADA_FOR = 26
      ,
      ADA_OUT = 27
      ,
      ADA_ARRAY = 28
      ,
      ADA_FUNCTION = 29
      ,
      ADA_AT = 30
      ,
      ADA_GENERIC = 31
      ,
      ADA_PACKAGE = 32
      ,
      ADA_TASK = 33
      ,
      ADA_BEGIN = 34
      ,
      ADA_GOTO = 35
      ,
      ADA_PRAGMA = 36
      ,
      ADA_TERMINATE = 37
      ,
      ADA_BODY = 38
      ,
      ADA_PRIVATE = 39
      ,
      ADA_THEN = 40
      ,
      ADA_IF = 41
      ,
      ADA_PROCEDURE = 42
      ,
      ADA_TYPE = 43
      ,
      ADA_CASE = 44
      ,
      ADA_IN = 45
      ,
      ADA_CONSTANT = 46
      ,
      ADA_IS = 47
      ,
      ADA_RAISE = 48
      ,
      ADA_USE = 49
      ,
      ADA_DECLARE = 50
      ,
      ADA_RANGE = 51
      ,
      ADA_DELAY = 52
      ,
      ADA_LIMITED = 53
      ,
      ADA_RECORD = 54
      ,
      ADA_WHEN = 55
      ,
      ADA_DELTA = 56
      ,
      ADA_LOOP = 57
      ,
      ADA_REM = 58
      ,
      ADA_WHILE = 59
      ,
      ADA_DIGITS = 60
      ,
      ADA_RENAMES = 61
      ,
      ADA_DO = 62
      ,
      ADA_MOD = 63
      ,
      ADA_XOR = 64
      ,
      ADA_PAR_CLOSE = 65
      ,
      ADA_PAR_OPEN = 66
      ,
      ADA_SEMICOLON = 67
      ,
      ADA_COLON = 68
      ,
      ADA_COMMA = 69
      ,
      ADA_DOUBLEDOT = 70
      ,
      ADA_DOT = 71
      ,
      ADA_DIAMOND = 72
      ,
      ADA_LTE = 73
      ,
      ADA_GTE = 74
      ,
      ADA_ARROW = 75
      ,
      ADA_EQUAL = 76
      ,
      ADA_LT = 77
      ,
      ADA_GT = 78
      ,
      ADA_PLUS = 79
      ,
      ADA_MINUS = 80
      ,
      ADA_POWER = 81
      ,
      ADA_MULT = 82
      ,
      ADA_AMP = 83
      ,
      ADA_NOTEQUAL = 84
      ,
      ADA_DIVIDE = 85
      ,
      ADA_TICK = 86
      ,
      ADA_PIPE = 87
      ,
      ADA_ASSIGN = 88
      ,
      ADA_LABEL_START = 89
      ,
      ADA_LABEL_END = 90
      ,
      ADA_TARGET = 91
      ,
      ADA_STRING = 92
      ,
      ADA_CHAR = 93
      ,
      ADA_WITH = 94
      ,
      ADA_DECIMAL = 95
      ,
      ADA_INTEGER = 96
      ,
      ADA_COMMENT = 97
      ,
      ADA_PREP_LINE = 98
      ,
      ADA_WHITESPACE = 99
} ada_token_kind;
/* Reference to a token in an analysis unit.  */
typedef struct {
    /* Private data associated to this token or NULL if this designates no
       token.  */
    void *token_data;

    /* Internal identifiers for this token.  */
    int token_index, trivia_index;

    ada_token_kind kind;
    ada_text text;
    ada_source_location_range sloc_range;
} ada_token;
typedef struct ada_ada_node_array *ada_ada_node_array;
        

typedef struct ada_text_type *ada_text_type;
        

typedef struct ada_param_actual_array *ada_param_actual_array;
        



typedef struct {
        ada_internal_metadata md;
        ada_env_rebindings_type rebindings;
        ada_bool from_rebound;
} ada_internal_entity_info;
        



typedef struct {
        ada_base_node node;
        ada_internal_entity_info info;
} ada_base_entity;
        



typedef struct {
        ada_base_entity param;
        ada_base_entity actual;
} ada_internal_param_actual;
struct ada_ada_node_array {
   int n;
   int ref_count;
   ada_base_entity items[1];
};
        




struct ada_text_type {
   int n;
   int ref_count;
   uint32_t items[1];
};
        




struct ada_param_actual_array {
   int n;
   int ref_count;
   ada_internal_param_actual items[1];
};
        



/* Return the lexical parent for this node. Return null for the root AST node
   or for AST nodes for which no one has a reference to the parent.  */
extern int ada_ada_node_parent(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Return an array that contains the lexical parents (this node included).
   Nearer parents are first in the list.  */
extern int ada_ada_node_parents(
    ada_base_entity *node,


    ada_ada_node_array *value_p
);
        



/* Return an array that contains the direct lexical children.  */
extern int ada_ada_node_children(
    ada_base_entity *node,


    ada_ada_node_array *value_p
);
        



/* Return the first token used to parse this node.  */
extern int ada_ada_node_token_start(
    ada_base_entity *node,


    ada_token *value_p
);
        



/* Return the last token used to parse this node.  */
extern int ada_ada_node_token_end(
    ada_base_entity *node,


    ada_token *value_p
);
        



/* Return the 0-based index for Node in its parent's children.  */
extern int ada_ada_node_child_index(
    ada_base_entity *node,


    int *value_p
);
        



/* Return the node's previous sibling, if there is one.  */
extern int ada_ada_node_previous_sibling(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Return the node's next sibling, if there is one.  */
extern int ada_ada_node_next_sibling(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Return the analysis unit owning this node.  */
extern int ada_ada_node_unit(
    ada_base_entity *node,


    ada_analysis_unit *value_p
);
        



/* Return whether the node is a ghost.

   Unlike regular nodes, ghost nodes cover no token in the input source: they
   are logically located instead between two tokens. The "token_first" of all
   ghost nodes is the token right after this logical position, while they have
   no "token_last".  */
extern int ada_ada_node_is_ghost(
    ada_base_entity *node,


    ada_bool *value_p
);
        



/* Return a string containing the filename + the sloc in GNU conformant format.
   Useful to create diagnostics from a node.  */
extern int ada_ada_node_full_sloc_image(
    ada_base_entity *node,


    ada_text_type *value_p
);
        



/* Return whether this is an instance of AbortPresent  */
extern int ada_abort_node_p_as_bool(
    ada_base_entity *node,


    ada_bool *value_p
);
        



/* Return whether this is an instance of AbstractPresent  */
extern int ada_abstract_node_p_as_bool(
    ada_base_entity *node,


    ada_bool *value_p
);
        



/* Returns an array of pairs, associating formal parameters to actual
   expressions. The formals to match are retrieved by resolving the call which
   this AssocList represents the actuals of.  */
extern int ada_assoc_list_p_zip_with_params(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_param_actual_array *value_p
);
        



/* Return whether this is an instance of AliasedPresent  */
extern int ada_aliased_node_p_as_bool(
    ada_base_entity *node,


    ada_bool *value_p
);
        



/* Return whether this is an instance of AllPresent  */
extern int ada_all_node_p_as_bool(
    ada_base_entity *node,


    ada_bool *value_p
);
        



/* This field contains a list that itself contains one of the following nodes:

   * ada_attribute_ref

   * ada_bin_op

   * ada_call_expr

   * ada_char_literal

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_qual_expr

   * ada_string_literal

   * ada_subtype_indication

   * ada_target_name  */
extern int ada_constrained_array_indices_f_list(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_unconstrained_array_indices_f_types(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_attribute_ref

   * ada_call_expr

   * ada_char_literal

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_qual_expr

   * ada_string_literal

   * ada_target_name  */
extern int ada_aspect_assoc_f_id(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_allocator

   * ada_attribute_ref

   * ada_base_aggregate

   * ada_bin_op

   * ada_call_expr

   * ada_case_expr

   * ada_char_literal

   * ada_contract_cases

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_if_expr

   * ada_membership_expr

   * ada_null_literal

   * ada_num_literal

   * ada_paren_expr

   * ada_qual_expr

   * ada_quantified_expr

   * ada_raise_expr

   * ada_string_literal

   * ada_target_name

   * ada_un_op  */
extern int ada_aspect_assoc_f_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_char_literal

   * ada_identifier

   * ada_string_literal  */
extern int ada_at_clause_f_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_allocator

   * ada_attribute_ref

   * ada_base_aggregate

   * ada_bin_op

   * ada_call_expr

   * ada_case_expr

   * ada_char_literal

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_if_expr

   * ada_membership_expr

   * ada_null_literal

   * ada_num_literal

   * ada_paren_expr

   * ada_qual_expr

   * ada_quantified_expr

   * ada_raise_expr

   * ada_string_literal

   * ada_target_name

   * ada_un_op  */
extern int ada_at_clause_f_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_attribute_ref

   * ada_call_expr

   * ada_char_literal

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_qual_expr

   * ada_string_literal

   * ada_target_name  */
extern int ada_attribute_def_clause_f_attribute_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_allocator

   * ada_attribute_ref

   * ada_base_aggregate

   * ada_bin_op

   * ada_call_expr

   * ada_case_expr

   * ada_char_literal

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_if_expr

   * ada_membership_expr

   * ada_null_literal

   * ada_num_literal

   * ada_paren_expr

   * ada_qual_expr

   * ada_quantified_expr

   * ada_raise_expr

   * ada_string_literal

   * ada_target_name

   * ada_un_op  */
extern int ada_attribute_def_clause_f_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_char_literal

   * ada_dotted_name

   * ada_identifier

   * ada_string_literal  */
extern int ada_enum_rep_clause_f_type_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_enum_rep_clause_f_aggregate(
    ada_base_entity *node,


    ada_base_entity *value_p
);