frontend/virtual/Include/libadalang/libadalang-implementation-c.ads


   function ada_ada_node_parent
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_parent";
      --  Return the lexical parent for this node. Return null for the root AST
      --  node or for AST nodes for which no one has a reference to the parent.

   function ada_ada_node_parents
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_ada_node_array)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_parents";
      --  Return an array that contains the lexical parents (this node
      --  included). Nearer parents are first in the list.

   function ada_ada_node_children
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_ada_node_array)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_children";
      --  Return an array that contains the direct lexical children.

   function ada_ada_node_token_start
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_token) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_token_start";
      --  Return the first token used to parse this node.

   function ada_ada_node_token_end
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_token) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_token_end";
      --  Return the last token used to parse this node.

   function ada_ada_node_child_index
     (Node : ada_base_entity_Ptr;
Value_P    : access int) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_child_index";
      --  Return the 0-based index for Node in its parent's children.

   function ada_ada_node_previous_sibling
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_previous_sibling";
      --  Return the node's previous sibling, if there is one.

   function ada_ada_node_next_sibling
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_next_sibling";
      --  Return the node's next sibling, if there is one.

   function ada_ada_node_unit
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_analysis_unit)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_unit";
      --  Return the analysis unit owning this node.

   function ada_ada_node_is_ghost
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_is_ghost";
      --  Return whether the node is a ghost.
      --
      --  Unlike regular nodes, ghost nodes cover no token in the input
      --  source: they are logically located instead between two tokens.
      --  The "token_first" of all ghost nodes is the token right after
      --  this logical position, while they have no "token_last".

   function ada_ada_node_full_sloc_image
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_text_type)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_full_sloc_image";
      --  Return a string containing the filename + the sloc in GNU conformant
      --  format. Useful to create diagnostics from a node.

   function ada_abort_node_p_as_bool
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_abort_node_p_as_bool";
      --  Return whether this is an instance of AbortPresent

   function ada_abstract_node_p_as_bool
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_abstract_node_p_as_bool";
      --  Return whether this is an instance of AbstractPresent

   function ada_assoc_list_p_zip_with_params
     (Node : ada_base_entity_Ptr;
Imprecise_Fallback :
ada_bool;

      Value_P : access ada_param_actual_array) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_assoc_list_p_zip_with_params";
      --  Returns an array of pairs, associating formal parameters to actual
      --  expressions. The formals to match are retrieved by resolving the
      --  call which this AssocList represents the actuals of.

   function ada_aliased_node_p_as_bool
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_aliased_node_p_as_bool";
      --  Return whether this is an instance of AliasedPresent

   function ada_all_node_p_as_bool
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_all_node_p_as_bool";
      --  Return whether this is an instance of AllPresent

   function ada_constrained_array_indices_f_list
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_constrained_array_indices_f_list";
      --  This field contains a list that itself contains one of the following
      --  nodes:
      --
      --  * Attribute_Ref
      --
      --  * Bin_Op
      --
      --  * Call_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * Qual_Expr
      --
      --  * String_Literal
      --
      --  * Subtype_Indication
      --
      --  * Target_Name

   function ada_unconstrained_array_indices_f_types
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_unconstrained_array_indices_f_types";

   function ada_aspect_assoc_f_id
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_aspect_assoc_f_id";
      --  This field can contain one of the following nodes:
      --
      --  * Attribute_Ref
      --
      --  * Call_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * Qual_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name

   function ada_aspect_assoc_f_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_aspect_assoc_f_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Allocator
      --
      --  * Attribute_Ref
      --
      --  * Base_Aggregate
      --
      --  * Bin_Op
      --
      --  * Call_Expr
      --
      --  * Case_Expr
      --
      --  * Char_Literal
      --
      --  * Contract_Cases
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * If_Expr
      --
      --  * Membership_Expr
      --
      --  * Null_Literal
      --
      --  * Num_Literal
      --
      --  * Paren_Expr
      --
      --  * Qual_Expr
      --
      --  * Quantified_Expr
      --
      --  * Raise_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
      --
      --  * Un_Op

   function ada_at_clause_f_name
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_at_clause_f_name";
      --  This field can contain one of the following nodes:
      --
      --  * Char_Literal
      --
      --  * Identifier
      --
      --  * String_Literal

   function ada_at_clause_f_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_at_clause_f_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Allocator
      --
      --  * Attribute_Ref
      --
      --  * Base_Aggregate
      --
      --  * Bin_Op
      --
      --  * Call_Expr
      --
      --  * Case_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * If_Expr
      --
      --  * Membership_Expr
      --
      --  * Null_Literal
      --
      --  * Num_Literal
      --
      --  * Paren_Expr
      --
      --  * Qual_Expr
      --
      --  * Quantified_Expr
      --
      --  * Raise_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
      --
      --  * Un_Op

   function ada_attribute_def_clause_f_attribute_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_attribute_def_clause_f_attribute_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Attribute_Ref
      --
      --  * Call_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * Qual_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name

   function ada_attribute_def_clause_f_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_attribute_def_clause_f_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Allocator
      --
      --  * Attribute_Ref
      --
      --  * Base_Aggregate
      --
      --  * Bin_Op
      --
      --  * Call_Expr
      --
      --  * Case_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * If_Expr
      --
      --  * Membership_Expr
      --
      --  * Null_Literal
      --
      --  * Num_Literal
      --
      --  * Paren_Expr
      --
      --  * Qual_Expr
      --
      --  * Quantified_Expr
      --
      --  * Raise_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
      --
      --  * Un_Op

   function ada_enum_rep_clause_f_type_name
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_enum_rep_clause_f_type_name";
      --  This field can contain one of the following nodes:
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Identifier
      --
      --  * String_Literal

   function ada_enum_rep_clause_f_aggregate
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_enum_rep_clause_f_aggregate";
